# AI-Log-Analyzer

./: .gitignore  README.md  api.py
.github/workflows/: ci.yml
nvda_log_analyzer/: Dockerfile  pyproject.toml
nvda_log_analyzer/src/analyzer/: ai_client.py  api.py  cli.py  parser.py
nvda_log_analyzer/src/analyzer/patterns/: signatures.py
nvda_log_analyzer/tests/: test_api.py  test_parser.py  test_signatures.py
